--- a/_publications/2025-02-16-DAC2025-CXL-ECC.md
+++ b/_publications/2025-02-16-DAC2025-CXL-ECC.md
@@ -7,7 +7,11 @@ excerpt: 'In this paper, we propose embedding LRC Code as Inter-Channel ECC into
 date: 2025-02-16
 venue: 'Proceedings of the 62st ACM/IEEE Design Automation Conference, DAC 2025'
 # paperurl: 'http://academicpages.github.io/files/paper3.pdf'
-citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
+# citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
+#### Authors
+
+**Yixuan Liu***, Yunfei Gu, Junhao Dai, Xinyuan Wu, Chentao Wu, Xinfei Guo, Jieru Zhao, Jie Li and Minyi Guo
+#### Abstract
 Compute eXpress Link (CXL) offers an effective interface for connecting CPUs with external computing and memory devices. CXL Memory eXpander Controller (CXL-MXC) is gaining attention for its ability to boost memory capacity and bandwidth more efficiently than traditional DDR DIMMs. Despite extensive research on MXC performance and adaptation, DRAM reliability in CXL architecture remains underexplored. Traditional fault tolerance mechanisms like replica or RAID-based systems would significantly increase bandwidth overhead in the CXL fabric, adversely affecting system performance. To address this, we propose the on-CXL-Memory-Expander-Controller ECC (CXL-ECC), by using Locally Recoverable Codes (LRC) as the Inter-Channel-ECC (IC-ECC) and offloading its process to the expander, we eliminate extra memory access requests in the CXL fabric.
 Consequently, we conduct several experiments to demonstrate that our approach enhances DRAM reliability by more than $10^9$, compared to state-of-the-art ECC methods. Relative to RAID-enabled CXL switch, it reduces additional bandwidth overhead from 63.5\% to 3.4\% and improves system performance by 12\%.
