--- a/_publications/2025-02-16-DAC2025-MemSeer.md
+++ b/_publications/2025-02-16-DAC2025-MemSeer.md
@@ -7,8 +7,12 @@ excerpt: 'This paper introduces MemSeer, an AIOps-integrated tool that predicts 
 date: 2025-02-16
 venue: 'Proceedings of the 62st ACM/IEEE Design Automation Conference, DAC 2025'
 # paperurl: 'http://academicpages.github.io/files/paper3.pdf'
-citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
+# citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
+#### Authors
 
-test.
+Yunfei Gu, **Yixuan Liu***, Xinyuan Wu, Bo Shao, Chentao Wu, Shiyi Li, Jieru Zhao, Jie Li, Minyi Guo, Kunlin Yang, Wengui Zhang and Feilong Lin
+
+#### Abstract
+
 In high-performance ultra-scale cloud computing, heterogeneous clusters consisting of x86 and ARM architecture platforms have become increasingly common to boost performance and energy efficiency. Ensuring high availability in these environments is crucial for meeting service-level agreements. However, DRAM failures, a primary cause of server downtimes, present significant challenges to reliability, availability, and serviceability. This paper provides an in-depth analysis of memory failure characteristics across cross-architecture platforms in large-scale heterogeneous clusters. We introduce MemSeer, an AIOps-integrated tool that utilizes a multi-grained memory failure prediction approach for x86/ARM heterogeneous clusters. MemSeer improves the F1-score by 17.3\% and increases recall by an average of 27\% across different lead times compared to state-of-the-art methods. These advancements show great promise in reducing memory failures in cluster environments, decreasing VM interruptions by up to 42.7\% and averaging 24.2\% in real-world implementations.
