--- a/_publications/2025-02-16-DAC2025-CXL-ECC.md
+++ b/_publications/2025-02-16-DAC2025-CXL-ECC.md
@@ -5,7 +5,7 @@ category: conferences
 permalink: /publication/DAC-2025-CXL-ECC
 excerpt: 'In this paper, we propose embedding LRC Code as Inter-Channel ECC into CXL Memory Expander, achieving a 10^9 improvement in reliability and a 12% optimization in system performance.'
 date: 2025-02-16
-venue: 'Proceedings of the 62st ACM/IEEE Design Automation Conference, DAC 2025'
+venue: 'Proceedings of the 62nd ACM/IEEE Design Automation Conference, DAC 2025'
 # paperurl: 'http://academicpages.github.io/files/paper3.pdf'
 # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
