--- a/_publications/2025-02-16-DAC2025-MemSeer.md
+++ b/_publications/2025-02-16-DAC2025-MemSeer.md
@@ -5,7 +5,7 @@ category: conferences
 permalink: /publication/DAC-2025-MemSeer
 excerpt: 'This paper introduces MemSeer, an AIOps-integrated tool that predicts memory failures in x86/ARM heterogeneous clusters, achieving a 17.3% improvement in F1-score and 27% increase in recall, and reducing VM interruptions by up to 42.7% in real-world implementations.'
 date: 2025-02-16
-venue: 'Proceedings of the 62st ACM/IEEE Design Automation Conference, DAC 2025'
+venue: 'Proceedings of the 62nd ACM/IEEE Design Automation Conference, DAC 2025'
 # paperurl: 'http://academicpages.github.io/files/paper3.pdf'
 # citation: 'Your Name, You. (2024). &quot;Paper Title Number 3.&quot; <i>GitHub Journal of Bugs</i>. 1(3).'
 ---
